# find_webs_in_box_girder

./: .gitignore  README.md
FAST_LIO/: CMakeLists.txt
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: hesai.yaml  hesai_bag2.yaml  hesai_bag4.yaml  hesai_bag5.yaml  hesai_bag6.yaml  lslidar.yaml  velodyne.yaml  velodyne_test.yaml  velodyne_xiangliang_sim.yaml
FAST_LIO/include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
FAST_LIO/launch/: mapping_hesai.launch  mapping_hesai_bag2.launch  mapping_hesai_bag4.launch  mapping_hesai_bag5.launch  mapping_hesai_bag6.launch  mapping_lslidar.launch  mapping_velodyne_xiangliang_sim.launch
FAST_LIO/rviz_cfg/: hesai.rviz
FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
pcl_test/: CMakeLists.txt  README  package.xml
pcl_test/config/: PandarXT-16.yaml  PandarXT-16_bag1.yaml  PandarXT-16_bag2.yaml  PandarXT-16_bag3.yaml  velodyne16_sim.yaml
pcl_test/launch/: cloudToWebs_PandarXT-16.launch  cloudToWebs_PandarXT-16_bag1.launch  cloudToWebs_PandarXT-16_bag2.launch  cloudToWebs_PandarXT-16_bag3.launch  cloudToWebs_PandarXT-16_bag5.launch  cloudToWebs_PandarXT-16_bag6.launch  cloudToWebs_velodyne.launch  test.launch
pcl_test/msg/: CloudPose.msg  PoseAndCorner.msg
pcl_test/rviz_config/: show.rviz
pcl_test/src/: box_girder_construction.cpp  calCorner_tmp.cpp  ceres_test.cpp  cloudToWebs.cpp  density_calculate.cpp  findWebs.cpp  findWebs.h  find_line_1.cpp  find_rib_plate.cpp  locate_weld.cpp  mesh_sampling.cpp  pathPlanning.cpp  pathPlanning.h  pcd2txt.cpp  process_sim_xiangliang_ra.cpp  read_and_show.cpp  sendControl.cpp  twist_test.cpp
robot_sim_demo/launch/: sample_robot_spawn.launch  sample_robot_spawn_xiangliang.launch
robot_sim_demo/launch/include/: sample_xbot-u.launch.xml  xbot-u.launch.xml
robot_sim_demo/urdf/: xbot-u.gazebo  xbot-u.urdf.xacro  xbot-u.urdf_dae.xacro
xiangliang/: CMakeLists.txt  package.xml
xiangliang/launch/: run (copy).launch  run.launch
xiangliang/meshes/: xiangliang.STL  xiangliangre_x0.002.STL
xiangliang/urdf/: xiangliang.urdf
xiangliang/worlds/: xiangliang.world  xiangliang_x2.world
yocs_cmd_vel/: CMakeLists.txt  README.md
yocs_cmd_vel/include/yocs_cmd_vel_mux/: cmd_vel_mux_nodelet.hpp
yocs_cmd_vel/launch/: cmd_vel_mux.launch
yocs_cmd_vel/src/: cmd_vel_mux_nodelet.cpp
